// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MappingOps createMappingExportTemplate() 1: Create Mapping Export Template 1`] = `
{
  "mapping": {},
  "meta": Any<Object>,
}
`;

exports[`MappingOps exportMappings() 1: Export mappings 1`] = `
{
  "mapping": {
    "mapping/managedBravo_group_managedBravo_group": {
      "_id": "mapping/managedBravo_group_managedBravo_group",
      "consentRequired": false,
      "displayName": "managedBravo_group_managedBravo_group",
      "icon": null,
      "name": "managedBravo_group_managedBravo_group",
      "policies": [
        {
          "action": "ASYNC",
          "situation": "ABSENT",
        },
        {
          "action": "ASYNC",
          "situation": "ALL_GONE",
        },
        {
          "action": "ASYNC",
          "situation": "AMBIGUOUS",
        },
        {
          "action": "ASYNC",
          "situation": "CONFIRMED",
        },
        {
          "action": "ASYNC",
          "situation": "FOUND",
        },
        {
          "action": "ASYNC",
          "situation": "FOUND_ALREADY_LINKED",
        },
        {
          "action": "ASYNC",
          "situation": "LINK_ONLY",
        },
        {
          "action": "ASYNC",
          "situation": "MISSING",
        },
        {
          "action": "ASYNC",
          "situation": "SOURCE_IGNORED",
        },
        {
          "action": "ASYNC",
          "situation": "SOURCE_MISSING",
        },
        {
          "action": "ASYNC",
          "situation": "TARGET_IGNORED",
        },
        {
          "action": "ASYNC",
          "situation": "UNASSIGNED",
        },
        {
          "action": "ASYNC",
          "situation": "UNQUALIFIED",
        },
      ],
      "properties": [],
      "source": "managed/bravo_group",
      "target": "managed/bravo_group",
    },
    "sync/managedAlpha_application_managedBravo_application": {
      "_id": "sync/managedAlpha_application_managedBravo_application",
      "consentRequired": true,
      "displayName": "Test Application Mapping",
      "icon": null,
      "name": "managedAlpha_application_managedBravo_application",
      "policies": [
        {
          "action": "ASYNC",
          "situation": "ABSENT",
        },
        {
          "action": "ASYNC",
          "situation": "ALL_GONE",
        },
        {
          "action": "ASYNC",
          "situation": "AMBIGUOUS",
        },
        {
          "action": "ASYNC",
          "situation": "CONFIRMED",
        },
        {
          "action": "ASYNC",
          "situation": "FOUND",
        },
        {
          "action": "ASYNC",
          "situation": "FOUND_ALREADY_LINKED",
        },
        {
          "action": "ASYNC",
          "situation": "LINK_ONLY",
        },
        {
          "action": "ASYNC",
          "situation": "MISSING",
        },
        {
          "action": "ASYNC",
          "situation": "SOURCE_IGNORED",
        },
        {
          "action": "ASYNC",
          "situation": "SOURCE_MISSING",
        },
        {
          "action": "ASYNC",
          "situation": "TARGET_IGNORED",
        },
        {
          "action": "ASYNC",
          "situation": "UNASSIGNED",
        },
        {
          "action": "ASYNC",
          "situation": "UNQUALIFIED",
        },
      ],
      "properties": [
        {
          "source": "authoritative",
          "target": "_id",
        },
      ],
      "source": "managed/alpha_application",
      "sourceQuery": {
        "_queryFilter": "(eq "" or eq "")",
      },
      "target": "managed/bravo_application",
      "targetQuery": {
        "_queryFilter": "!(eq "")",
      },
    },
    "sync/managedAlpha_user_managedBravo_user": {
      "_id": "sync/managedAlpha_user_managedBravo_user",
      "consentRequired": true,
      "displayName": "Test Mapping for Frodo",
      "icon": null,
      "name": "managedAlpha_user_managedBravo_user",
      "policies": [
        {
          "action": "ASYNC",
          "situation": "ABSENT",
        },
        {
          "action": "ASYNC",
          "situation": "ALL_GONE",
        },
        {
          "action": "ASYNC",
          "situation": "AMBIGUOUS",
        },
        {
          "action": "ASYNC",
          "situation": "CONFIRMED",
        },
        {
          "action": "ASYNC",
          "situation": "FOUND",
        },
        {
          "action": "ASYNC",
          "situation": "FOUND_ALREADY_LINKED",
        },
        {
          "action": "ASYNC",
          "situation": "LINK_ONLY",
        },
        {
          "action": "ASYNC",
          "situation": "MISSING",
        },
        {
          "action": "ASYNC",
          "situation": "SOURCE_IGNORED",
        },
        {
          "action": "ASYNC",
          "situation": "SOURCE_MISSING",
        },
        {
          "action": "ASYNC",
          "situation": "TARGET_IGNORED",
        },
        {
          "action": "ASYNC",
          "situation": "UNASSIGNED",
        },
        {
          "action": "ASYNC",
          "situation": "UNQUALIFIED",
        },
      ],
      "properties": [
        {
          "condition": {
            "globals": {},
            "source": "console.log("Hello World!");",
            "type": "text/javascript",
          },
          "default": [
            "Default value string",
          ],
          "source": "accountStatus",
          "target": "applications",
          "transform": {
            "globals": {},
            "source": "console.log("hello");",
            "type": "text/javascript",
          },
        },
      ],
      "source": "managed/alpha_user",
      "target": "managed/bravo_user",
    },
    "sync/managedBravo_user_managedAlpha_user": {
      "_id": "sync/managedBravo_user_managedAlpha_user",
      "consentRequired": false,
      "displayName": "Frodo test mapping",
      "icon": null,
      "name": "managedBravo_user_managedAlpha_user",
      "policies": [
        {
          "action": "ASYNC",
          "situation": "ABSENT",
        },
        {
          "action": "ASYNC",
          "situation": "ALL_GONE",
        },
        {
          "action": "ASYNC",
          "situation": "AMBIGUOUS",
        },
        {
          "action": "ASYNC",
          "situation": "CONFIRMED",
        },
        {
          "action": "ASYNC",
          "situation": "FOUND",
        },
        {
          "action": "ASYNC",
          "situation": "FOUND_ALREADY_LINKED",
        },
        {
          "action": "ASYNC",
          "situation": "LINK_ONLY",
        },
        {
          "action": "ASYNC",
          "situation": "MISSING",
        },
        {
          "action": "ASYNC",
          "situation": "SOURCE_IGNORED",
        },
        {
          "action": "ASYNC",
          "situation": "SOURCE_MISSING",
        },
        {
          "action": "ASYNC",
          "situation": "TARGET_IGNORED",
        },
        {
          "action": "ASYNC",
          "situation": "UNASSIGNED",
        },
        {
          "action": "ASYNC",
          "situation": "UNQUALIFIED",
        },
      ],
      "properties": [],
      "source": "managed/bravo_user",
      "target": "managed/alpha_user",
    },
  },
  "meta": Any<Object>,
}
`;

exports[`MappingOps readMappings() 1: Read mappings 1`] = `
[
  {
    "_id": "mapping/managedBravo_group_managedBravo_group",
    "consentRequired": false,
    "displayName": "managedBravo_group_managedBravo_group",
    "icon": null,
    "name": "managedBravo_group_managedBravo_group",
    "policies": [
      {
        "action": "ASYNC",
        "situation": "ABSENT",
      },
      {
        "action": "ASYNC",
        "situation": "ALL_GONE",
      },
      {
        "action": "ASYNC",
        "situation": "AMBIGUOUS",
      },
      {
        "action": "ASYNC",
        "situation": "CONFIRMED",
      },
      {
        "action": "ASYNC",
        "situation": "FOUND",
      },
      {
        "action": "ASYNC",
        "situation": "FOUND_ALREADY_LINKED",
      },
      {
        "action": "ASYNC",
        "situation": "LINK_ONLY",
      },
      {
        "action": "ASYNC",
        "situation": "MISSING",
      },
      {
        "action": "ASYNC",
        "situation": "SOURCE_IGNORED",
      },
      {
        "action": "ASYNC",
        "situation": "SOURCE_MISSING",
      },
      {
        "action": "ASYNC",
        "situation": "TARGET_IGNORED",
      },
      {
        "action": "ASYNC",
        "situation": "UNASSIGNED",
      },
      {
        "action": "ASYNC",
        "situation": "UNQUALIFIED",
      },
    ],
    "properties": [],
    "source": "managed/bravo_group",
    "target": "managed/bravo_group",
  },
  {
    "_id": "sync/managedAlpha_application_managedBravo_application",
    "consentRequired": true,
    "displayName": "Test Application Mapping",
    "icon": null,
    "name": "managedAlpha_application_managedBravo_application",
    "policies": [
      {
        "action": "ASYNC",
        "situation": "ABSENT",
      },
      {
        "action": "ASYNC",
        "situation": "ALL_GONE",
      },
      {
        "action": "ASYNC",
        "situation": "AMBIGUOUS",
      },
      {
        "action": "ASYNC",
        "situation": "CONFIRMED",
      },
      {
        "action": "ASYNC",
        "situation": "FOUND",
      },
      {
        "action": "ASYNC",
        "situation": "FOUND_ALREADY_LINKED",
      },
      {
        "action": "ASYNC",
        "situation": "LINK_ONLY",
      },
      {
        "action": "ASYNC",
        "situation": "MISSING",
      },
      {
        "action": "ASYNC",
        "situation": "SOURCE_IGNORED",
      },
      {
        "action": "ASYNC",
        "situation": "SOURCE_MISSING",
      },
      {
        "action": "ASYNC",
        "situation": "TARGET_IGNORED",
      },
      {
        "action": "ASYNC",
        "situation": "UNASSIGNED",
      },
      {
        "action": "ASYNC",
        "situation": "UNQUALIFIED",
      },
    ],
    "properties": [
      {
        "source": "authoritative",
        "target": "_id",
      },
    ],
    "source": "managed/alpha_application",
    "sourceQuery": {
      "_queryFilter": "(eq "" or eq "")",
    },
    "target": "managed/bravo_application",
    "targetQuery": {
      "_queryFilter": "!(eq "")",
    },
  },
  {
    "_id": "sync/managedAlpha_user_managedBravo_user",
    "consentRequired": true,
    "displayName": "Test Mapping for Frodo",
    "icon": null,
    "name": "managedAlpha_user_managedBravo_user",
    "policies": [
      {
        "action": "ASYNC",
        "situation": "ABSENT",
      },
      {
        "action": "ASYNC",
        "situation": "ALL_GONE",
      },
      {
        "action": "ASYNC",
        "situation": "AMBIGUOUS",
      },
      {
        "action": "ASYNC",
        "situation": "CONFIRMED",
      },
      {
        "action": "ASYNC",
        "situation": "FOUND",
      },
      {
        "action": "ASYNC",
        "situation": "FOUND_ALREADY_LINKED",
      },
      {
        "action": "ASYNC",
        "situation": "LINK_ONLY",
      },
      {
        "action": "ASYNC",
        "situation": "MISSING",
      },
      {
        "action": "ASYNC",
        "situation": "SOURCE_IGNORED",
      },
      {
        "action": "ASYNC",
        "situation": "SOURCE_MISSING",
      },
      {
        "action": "ASYNC",
        "situation": "TARGET_IGNORED",
      },
      {
        "action": "ASYNC",
        "situation": "UNASSIGNED",
      },
      {
        "action": "ASYNC",
        "situation": "UNQUALIFIED",
      },
    ],
    "properties": [
      {
        "condition": {
          "globals": {},
          "source": "console.log("Hello World!");",
          "type": "text/javascript",
        },
        "default": [
          "Default value string",
        ],
        "source": "accountStatus",
        "target": "applications",
        "transform": {
          "globals": {},
          "source": "console.log("hello");",
          "type": "text/javascript",
        },
      },
    ],
    "source": "managed/alpha_user",
    "target": "managed/bravo_user",
  },
  {
    "_id": "sync/managedBravo_user_managedAlpha_user",
    "consentRequired": false,
    "displayName": "Frodo test mapping",
    "icon": null,
    "name": "managedBravo_user_managedAlpha_user",
    "policies": [
      {
        "action": "ASYNC",
        "situation": "ABSENT",
      },
      {
        "action": "ASYNC",
        "situation": "ALL_GONE",
      },
      {
        "action": "ASYNC",
        "situation": "AMBIGUOUS",
      },
      {
        "action": "ASYNC",
        "situation": "CONFIRMED",
      },
      {
        "action": "ASYNC",
        "situation": "FOUND",
      },
      {
        "action": "ASYNC",
        "situation": "FOUND_ALREADY_LINKED",
      },
      {
        "action": "ASYNC",
        "situation": "LINK_ONLY",
      },
      {
        "action": "ASYNC",
        "situation": "MISSING",
      },
      {
        "action": "ASYNC",
        "situation": "SOURCE_IGNORED",
      },
      {
        "action": "ASYNC",
        "situation": "SOURCE_MISSING",
      },
      {
        "action": "ASYNC",
        "situation": "TARGET_IGNORED",
      },
      {
        "action": "ASYNC",
        "situation": "UNASSIGNED",
      },
      {
        "action": "ASYNC",
        "situation": "UNQUALIFIED",
      },
    ],
    "properties": [],
    "source": "managed/bravo_user",
    "target": "managed/alpha_user",
  },
]
`;

exports[`MappingOps readNewMappings() 1: Read new mappings 1`] = `
[
  {
    "_id": "mapping/managedBravo_group_managedBravo_group",
    "consentRequired": false,
    "displayName": "managedBravo_group_managedBravo_group",
    "icon": null,
    "name": "managedBravo_group_managedBravo_group",
    "policies": [
      {
        "action": "ASYNC",
        "situation": "ABSENT",
      },
      {
        "action": "ASYNC",
        "situation": "ALL_GONE",
      },
      {
        "action": "ASYNC",
        "situation": "AMBIGUOUS",
      },
      {
        "action": "ASYNC",
        "situation": "CONFIRMED",
      },
      {
        "action": "ASYNC",
        "situation": "FOUND",
      },
      {
        "action": "ASYNC",
        "situation": "FOUND_ALREADY_LINKED",
      },
      {
        "action": "ASYNC",
        "situation": "LINK_ONLY",
      },
      {
        "action": "ASYNC",
        "situation": "MISSING",
      },
      {
        "action": "ASYNC",
        "situation": "SOURCE_IGNORED",
      },
      {
        "action": "ASYNC",
        "situation": "SOURCE_MISSING",
      },
      {
        "action": "ASYNC",
        "situation": "TARGET_IGNORED",
      },
      {
        "action": "ASYNC",
        "situation": "UNASSIGNED",
      },
      {
        "action": "ASYNC",
        "situation": "UNQUALIFIED",
      },
    ],
    "properties": [],
    "source": "managed/bravo_group",
    "target": "managed/bravo_group",
  },
]
`;

exports[`MappingOps readSyncMappings() 1: Read sync mappings 1`] = `
[
  {
    "_id": "sync/managedAlpha_application_managedBravo_application",
    "consentRequired": true,
    "displayName": "Test Application Mapping",
    "icon": null,
    "name": "managedAlpha_application_managedBravo_application",
    "policies": [
      {
        "action": "ASYNC",
        "situation": "ABSENT",
      },
      {
        "action": "ASYNC",
        "situation": "ALL_GONE",
      },
      {
        "action": "ASYNC",
        "situation": "AMBIGUOUS",
      },
      {
        "action": "ASYNC",
        "situation": "CONFIRMED",
      },
      {
        "action": "ASYNC",
        "situation": "FOUND",
      },
      {
        "action": "ASYNC",
        "situation": "FOUND_ALREADY_LINKED",
      },
      {
        "action": "ASYNC",
        "situation": "LINK_ONLY",
      },
      {
        "action": "ASYNC",
        "situation": "MISSING",
      },
      {
        "action": "ASYNC",
        "situation": "SOURCE_IGNORED",
      },
      {
        "action": "ASYNC",
        "situation": "SOURCE_MISSING",
      },
      {
        "action": "ASYNC",
        "situation": "TARGET_IGNORED",
      },
      {
        "action": "ASYNC",
        "situation": "UNASSIGNED",
      },
      {
        "action": "ASYNC",
        "situation": "UNQUALIFIED",
      },
    ],
    "properties": [
      {
        "source": "authoritative",
        "target": "_id",
      },
    ],
    "source": "managed/alpha_application",
    "sourceQuery": {
      "_queryFilter": "(eq "" or eq "")",
    },
    "target": "managed/bravo_application",
    "targetQuery": {
      "_queryFilter": "!(eq "")",
    },
  },
  {
    "_id": "sync/managedAlpha_user_managedBravo_user",
    "consentRequired": true,
    "displayName": "Test Mapping for Frodo",
    "icon": null,
    "name": "managedAlpha_user_managedBravo_user",
    "policies": [
      {
        "action": "ASYNC",
        "situation": "ABSENT",
      },
      {
        "action": "ASYNC",
        "situation": "ALL_GONE",
      },
      {
        "action": "ASYNC",
        "situation": "AMBIGUOUS",
      },
      {
        "action": "ASYNC",
        "situation": "CONFIRMED",
      },
      {
        "action": "ASYNC",
        "situation": "FOUND",
      },
      {
        "action": "ASYNC",
        "situation": "FOUND_ALREADY_LINKED",
      },
      {
        "action": "ASYNC",
        "situation": "LINK_ONLY",
      },
      {
        "action": "ASYNC",
        "situation": "MISSING",
      },
      {
        "action": "ASYNC",
        "situation": "SOURCE_IGNORED",
      },
      {
        "action": "ASYNC",
        "situation": "SOURCE_MISSING",
      },
      {
        "action": "ASYNC",
        "situation": "TARGET_IGNORED",
      },
      {
        "action": "ASYNC",
        "situation": "UNASSIGNED",
      },
      {
        "action": "ASYNC",
        "situation": "UNQUALIFIED",
      },
    ],
    "properties": [
      {
        "condition": {
          "globals": {},
          "source": "console.log("Hello World!");",
          "type": "text/javascript",
        },
        "default": [
          "Default value string",
        ],
        "source": "accountStatus",
        "target": "applications",
        "transform": {
          "globals": {},
          "source": "console.log("hello");",
          "type": "text/javascript",
        },
      },
    ],
    "source": "managed/alpha_user",
    "target": "managed/bravo_user",
  },
  {
    "_id": "sync/managedBravo_user_managedAlpha_user",
    "consentRequired": false,
    "displayName": "Frodo test mapping",
    "icon": null,
    "name": "managedBravo_user_managedAlpha_user",
    "policies": [
      {
        "action": "ASYNC",
        "situation": "ABSENT",
      },
      {
        "action": "ASYNC",
        "situation": "ALL_GONE",
      },
      {
        "action": "ASYNC",
        "situation": "AMBIGUOUS",
      },
      {
        "action": "ASYNC",
        "situation": "CONFIRMED",
      },
      {
        "action": "ASYNC",
        "situation": "FOUND",
      },
      {
        "action": "ASYNC",
        "situation": "FOUND_ALREADY_LINKED",
      },
      {
        "action": "ASYNC",
        "situation": "LINK_ONLY",
      },
      {
        "action": "ASYNC",
        "situation": "MISSING",
      },
      {
        "action": "ASYNC",
        "situation": "SOURCE_IGNORED",
      },
      {
        "action": "ASYNC",
        "situation": "SOURCE_MISSING",
      },
      {
        "action": "ASYNC",
        "situation": "TARGET_IGNORED",
      },
      {
        "action": "ASYNC",
        "situation": "UNASSIGNED",
      },
      {
        "action": "ASYNC",
        "situation": "UNQUALIFIED",
      },
    ],
    "properties": [],
    "source": "managed/bravo_user",
    "target": "managed/alpha_user",
  },
]
`;
